# spdx-guide

./: Cargo.toml  LICENSE.spdx  README.md
i18n/en-GB/: spdx_guide.ftl
i18n/en-GB/ptbr-GB/: spdx_guide.ftl
i18n/es-ES/: spdx_guide.ftl
i18n/pt-BR/: spdx_guide.ftl
src/: main.rs  model.rs  steps.rs  vcs.rs
src/vcs/: git.rs
