[package]
name = "spdx-guide"
version = "0.1.0"
authors = ["JohnnyJayJay <johnnyjayjay02@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.14"
clap = { version = "3.2.22", features = ["derive"] }
console = "0.15.1"
dialoguer = "0.10.2"
