[package]
name = "spdx-guide"
version = "0.1.0"
authors = ["JohnnyJayJay <johnnyjayjay02@gmail.com>"]
description = "A tool to help you with the creation of spdx files in your projects"
edition = "2018"
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/JohnnyJayJay/spdx-guide"
repository = "https://github.com/JohnnyJayJay/spdx-guide"
keywords = ["cli", "licensing", "spdx"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.15.0"
i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"]}
i18n-embed-fl = "0.6.4"
rust-embed = "6"
spdx = "0.9.0"
uuid = { version = "1.1.2", features = ["v4"] }
whoami = "1.2.3"
clap = { version = "4.0.2", features = ["derive"] }
console = "0.15.1"
dialoguer = "0.10.2"
